syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Amargar.AdvertisType.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "AdsTypeProto";
option objc_class_prefix = "HLW";

package Amargar;

service AdsType{
  rpc GetAdsType (AdsTypeRequest) returns (AdsTypeReplyList);
}

message AdsTypeRequest{

}

message AdsTypeReply{
  int32 AdsTypeID = 1;
  string  AdsTypeName = 2;
}

message AdsTypeReplyList{
  repeated AdsTypeReply AdsTypes = 1;
}
